Fix preference UI:  * now the server error message displayed in the preference window word wrap  * And the message is in the same line that the connect button  * Replace id by preference attribut for optionTaskEnabled

--- a/src/chrome/skin/global.css
+++ b/src/chrome/skin/global.css
@@ -90,7 +90,12 @@ toolbar[iconsize="small"] #zimbra_mail_notifier-toolbar-button-label{
    -moz-image-region: rect(0px 48px 16px 32px);
 }
 
+#zimbra_mail_notifier-Preferences {
+    min-width: 400px;
+}
+
 #zimbra_mail_notifier-serverError {
+    word-wrap: break-word;
     font-size: 11px;
     font-weight: bold;
     color: red;
